--- a/week11/assign_04_template/pages/apply_now/css/apply_now.css
+++ b/week11/assign_04_template/pages/apply_now/css/apply_now.css
@@ -6,12 +6,30 @@ main#container .main-section{
 }
 
 main#container .main-section> .side-nav-container{
-    flex: 1;
+    flex: .8;
     padding: 1rem;
 }
+
 main#container .main-section> .form-container{
-    flex: 2;
+    flex: 2.2;
     padding: 1rem;
+}
+
+main#container .main-section> .side-nav-container aside ul{
+    list-style-type: none;
+    padding-left:1rem;
+}
+
+main#container .main-section> .side-nav-container aside ul li{
+    padding:.25rem 0;
+}
+
+.notify{
+    margin:1rem auto;
+    padding:.25rem 0;
+    text-align: center;
+    border:2px solid black;
+    border-radius:4px;
 }
 
 main#container .main-section h3{
@@ -22,7 +40,6 @@ main#container .main-section .side-nav-container a:hover{
     cursor: pointer;
     color: blue;
 }
-
 
 /*form elements*/
 input[type=text],
