--- a/week13/flex/templates/flex_form.html
+++ b/week13/flex/templates/flex_form.html
@@ -9,6 +9,7 @@
         *{
             box-sizing: border-box;
         }
+
         form {
             display: flex;
             align-items: flex-end;
@@ -34,13 +35,13 @@
 
         input{
             display: block;
-            width:100%;
+             width:100%; 
         }
     </style>
 </head>
 
 <body>
-    <form style="" class="">
+    <form class="">
         <label for="name" class="name">
             Name:
             <input id="name" type="text" class="" placeholder="David">
