--- a/week13/flex/templates/flex_margin_right.html
+++ b/week13/flex/templates/flex_margin_right.html
@@ -38,7 +38,8 @@
         }
 
         li.logo {
-            margin-right: auto;
+             margin-right: auto; 
+             /* margin-left: auto;  */
         }
     </style>
 </head>
