--- a/week13/flex/templates/flex_responsive.html
+++ b/week13/flex/templates/flex_responsive.html
@@ -13,17 +13,17 @@
         }
 
         /* columns */
-        /* .responsive-three-columns>* {
+        .responsive-three-columns>* {
             width: 100%;
             padding: .25rem;
-        } */
+        }
 
         /* tablet breakpoint */
-        /* @media (min-width:768px) {
+        @media (min-width:768px) {
             .responsive-three-columns>* {
                 width: 32%;
             }
-        } */
+        } 
     </style>
 </head>
 
