--- a/week13/flex/templates/flex_container_control.html
+++ b/week13/flex/templates/flex_container_control.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            box-sizing: border-box;
+        }
         .flex-wrapper {
             display: flex;
         }
@@ -15,7 +18,8 @@
         }
 
         .item {
-            height: 50px;
+            font-size: xx-large;
+            padding-left: 1rem;
             border: 2px solid;
             border-radius: 4px;
             background: hotpink;
@@ -25,14 +29,9 @@
 </head>
 
 <body>
-    <h3>rendered using Flow layout, and in Flow layout, width is a hard constraint. <br> When we set width: 2000px, we'll get
-        a 2000-pixel wide element, <br>even if it has to burst through the side of the viewport</h3>
-    <div class="item"></div>
-        <h3>
-            In Flexbox, however, the width property is implemented differently. It's more of a suggestion than a hard constraint.
-        </h3>
+    <div class="item">withtout flex</div>
     <div class="flex-wrapper">
-        <div class="item"></div>
+        <div class="item">with flex</div>
     </div>
 </body>
 
