--- a/week13/layout/zindex_stackedcontext.html
+++ b/week13/layout/zindex_stackedcontext.html
@@ -7,11 +7,11 @@
     <title>Document</title>
     <style>
         .container {
+            position: relative;
             width: 150px;
             height: 150px;
-            border: solid 3px;
+            border: 3px solid ;
             margin: 10px;
-            position: relative;
         }
 
         .child {
