--- a/week14/flex/classwork/2_column/css/style.css
+++ b/week14/flex/classwork/2_column/css/style.css
@@ -53,7 +53,7 @@ main {
   display: flex;
 }
 main aside {
-  width: 20%;
+  flex-basis: 20%;
   padding: 0.5rem;
 }
 main aside ul {
@@ -71,7 +71,7 @@ main aside ul li:hover {
   background-color: #111;
 }
 main section {
-  width: 80%;
+  flex-basis: 80%;
   padding: 0.5rem;
 }
 
