--- a/week14/flex/classwork/2_column/css/style.scss
+++ b/week14/flex/classwork/2_column/css/style.scss
@@ -64,7 +64,7 @@ main {
   display: flex;
 
   aside {
-    width: 20%;
+    flex-basis: 20%;
     padding: $pd;
     ul {
       list-style-type: none;
@@ -85,7 +85,7 @@ main {
   }
 
   section {
-    width: 80%;
+    flex-basis: 80%;
     padding: $pd;
   }
 }
