--- a/week14/flex/classwork/3_column_classwork/css/style.css
+++ b/week14/flex/classwork/3_column_classwork/css/style.css
@@ -53,7 +53,7 @@ main {
   display: flex;
 }
 main aside {
-  width: 20%;
+  flex-basis: 20%;
   padding: 0.5rem;
 }
 main aside ul {
@@ -71,12 +71,12 @@ main aside ul li:hover {
   background-color: #111;
 }
 main section {
-  width: 60%;
+  flex-basis: 60%;
   padding: 0.5rem;
 }
-main aside {
+/* main aside {
   width: 20%;
-}
+} */
 
 /*------end main area-----*/
 /*------start footer-----*/
