--- a/week14/flex/classwork/3_column_classwork/css/style.scss
+++ b/week14/flex/classwork/3_column_classwork/css/style.scss
@@ -64,7 +64,7 @@ main {
   display: flex;
   // flex: 20% 60% 20%;
   aside {
-    width: 20%;
+    flex-basis: 20%;
     padding: $pd;
     ul {
       list-style-type: none;
@@ -85,11 +85,11 @@ main {
   }
 
   section {
-    width: 60%;
+    flex-basis: 60%;
     padding: $pd;
   }
   aside {
-    width: 20%;
+    flex-basis: 20%;
   }
 }
 /*------end main area-----*/
