--- a/week14/flex/templates/flex_container_control.html
+++ b/week14/flex/templates/flex_container_control.html
@@ -8,6 +8,8 @@
     <style>
         body{
             box-sizing: border-box;
+            margin:0;
+            padding:0;
         }
         .flex-wrapper {
             display: flex;
