--- a/week14/flex/templates/flex_form.html
+++ b/week14/flex/templates/flex_form.html
@@ -14,28 +14,23 @@
             display: flex;
             align-items: flex-end;
             flex-wrap: wrap;
-            gap: 16px;
+            gap: 1rem;
         }
 
         .name {
             flex-grow: 1;
-            flex-basis: 160px;
         }
 
         .email {
             flex-grow: 3;
-            flex-basis: 200px;
         }
 
         button {
             flex-grow: 1;
-            flex-basis: 80px;
-            width:100%;
         }
 
         input{
-            display: block;
-             width:100%; 
+             width:100%;  
         }
     </style>
 </head>
